remove webapp
